fix: fix canvas functionality on mobile device

--- a/styles/index.css
+++ b/styles/index.css
@@ -115,7 +115,7 @@ body {
 }
 
 .banner__main {
-    width: 400px;
+    width: min(400px, 100%);
     height: 250px;
     margin-top: 80px;
     border: var(--border-width) var(--border-style) var(--border-color);
